use sub/moon for dark mode toggle. remove lamp per https://github.com/AleksandrHovhannisyan/aleksandrhovhannisyan.com/issues/72

--- a/_sass/partials/components/_lamp.scss
+++ b/_sass/partials/components/_lamp.scss
@@ -258,7 +258,6 @@ article.dark-theme {
 
 .lamp {
     cursor: pointer;
-    --lamp-color: var(--color-black-60);
     width: 45px;
     height: 45px;
     background-color: transparent;
@@ -266,115 +265,4 @@ article.dark-theme {
     position: relative;
     transform: scale(0.711);
     transform-style: preserve-3d;
-    // @include font-size(0); // this is special... (?) causing error:
-    //Conversion error: Jekyll::Converters::Scss encountered an error while converting 'css/main.scss':
-    //                    Undefined variable: "$type-scale". on line 273
-    //             Error: Undefined variable: "$type-scale". on line 273
-    //             Error: Run jekyll build --trace for more information.
-
-    > * {
-        display: block;
-    }
-
-    &:active {
-        .lamp-base::after {
-            top: -0.5px;
-        }
-    }
-
-    .dark & {
-        filter: brightness(0.75);
-    }
-}
-
-.lamp-base {
-    position: absolute;
-    bottom: 0;
-    right: 5px;
-    width: 30px;
-    height: 7px;
-    background-color: var(--lamp-color);
-    border-radius: 4px 4px 0 0;
-    transform-style: preserve-3d;
-    box-shadow: inset 0 0.5px 2px rgba(0, 0, 0, 0.6);
-
-    &::after {
-        content: '';
-        position: absolute;
-        transform: translateZ(-1px);
-        width: 6px;
-        height: 6px;
-        top: -2px;
-        left: 4px;
-        border-radius: 1px 1px 0 0;
-        background-color: var(--color-white);
-    }
-}
-
-.lamp-neck {
-    width: 4px;
-    height: 20px;
-    background-color: var(--lamp-color);
-    position: absolute;
-    transform: translateZ(-1px) rotate(20deg);
-    right: 8px;
-    bottom: 5px;
-
-    &::after {
-        content: '';
-        background-color: var(--lamp-color);
-        width: 4px;
-        height: 20px;
-        position: absolute;
-        transform: rotate(-60deg);
-        left: -8px;
-        top: -14px;
-    }
-}
-
-.lamp-head {
-    width: 20px;
-    height: 10px;
-    background-image: linear-gradient(to bottom, var(--color-black-55) 5%, var(--lamp-color) 90%, var(--color-black-55) 5%);
-    border-radius: 100px 100px 0 0;
-    transform: rotate(45deg);
-    position: absolute;
-    left: 10px;
-    top: 4px;
-    transform-style: preserve-3d;
-    z-index: 2;
-    box-shadow: 0 4px 4px -2px rgba(230, 230, 230, 1);
-
-    &::before {
-        content: '';
-        display: block;
-        position: absolute;
-        width: 6px;
-        height: 6px;
-        background-color: var(--lamp-color);
-        border-radius: 50%;
-        right: 6px;
-        top: -4px;
-        transform: translateZ(-1px);
-    }
-
-    &::after {
-        content: '';
-        position: absolute;
-        width: 20px;
-        height: 40px;
-        background: linear-gradient(rgba(255,255,255,0.8), rgba(255, 255, 255, 0.35), rgba(255,255,255,0.05));
-        clip-path: polygon(30% 0, 70% 0, 100% 100%, 0 100%);
-        transform: translateZ(-1px);
-        right: 0;
-        top: 10px;
-    }
-
-    .dark & {
-        box-shadow: none;
-
-        &::after {
-            background: transparent;
-        }
-    }
 }
